Fix cargo publish: include fixtures directory for template files
Template files are required at compile time via include_str! macro

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,13 +13,14 @@ categories = ["wasm", "api-bindings", "virtualization"]
 authors = ["Eric Evans <ciresnave@gmail.com>"]
 exclude = [
     "target/*",
-    "fixtures/*",
     "benches/*",
     "examples/*",
     "tests/*",
     ".git*",
-    "*.md",
-    "LICENSE",
+    "CHANGELOG.md",
+    "CONTRIBUTING.md",
+    "API.md",
+    "TRAIT_DESIGN.md",
 ]
 
 [dependencies]
