--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "wasm-sandbox"
-version = "0.2.0"
-edition = "2021"
-description = "A secure WebAssembly sandbox for running untrusted code with flexible host-guest communication"
+version = "0.3.0"
+edition = "2024"
+description = "A secure WebAssembly sandbox with dead-simple ease of use, progressive complexity APIs, and comprehensive safety controls"
 license = "MIT"
 readme = "README.md"
 homepage = "https://github.com/ciresnave/wasm-sandbox"
